--- a/scss/style.css
+++ b/scss/style.css
@@ -24,8 +24,9 @@ a {
 header {
   height: 80px;
   padding: 1.25em 1em;
-  width: clamp(375px, 95%, 1024px);
+  width: clamp(360px, 95%, 1024px);
   margin: auto;
+  overflow: hidden;
 }
 header .header-wrapper {
   height: 100%;
